force-app/main/default/objects/Opportunity/fields/Missed_Quarterly_Checks__c.field-meta.xml
<CustomField>
    <fullName>Missed_Quarterly_Checks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Missed Quarterly Checks</label>
    <type>Checkbox</type>
</CustomField>