force-app/main/default/objects/Opportunity/fields/Moving_Date__c.field-meta.xml
<CustomField>
    <fullName>Moving_Date__c</fullName>
    <label>Moving Date</label>
    <type>Date</type>
</CustomField>