force-app/main/default/objects/Opportunity/fields/New_Notes__c.field-meta.xml
<CustomField>
    <fullName>New_Notes__c</fullName>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>