force-app/main/default/objects/Opportunity/fields/Offboarding_Initiated_Date__c.field-meta.xml
<CustomField>
    <fullName>Offboarding_Initiated_Date__c</fullName>
    <label>Offboarding Initiated Date</label>
    <type>Date</type>
</CustomField>