force-app/main/default/objects/Opportunity/fields/Onboarding_Accounting_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Accounting_Advisor__c</fullName>
    <label>Onboarding Accounting Advisor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>