force-app/main/default/objects/Opportunity/fields/Onboarding_Fee_Status__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Fee_Status__c</fullName>
    <label>Onboarding Fee Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>