force-app/main/default/objects/Opportunity/fields/Onboarding_Link__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Link__c</fullName>
    <formula>IF( Onboarding_Token__c =&quot;&quot;,&quot;&quot;, &quot;https://app.collective.com/?welcome=&quot; &amp;Onboarding_Token__c)</formula>
    <label>Onboarding Link</label>
    <type>Text</type>
</CustomField>