force-app/main/default/objects/Opportunity/fields/Onboarding_Token__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Token__c</fullName>
    <label>Onboarding Token</label>
    <length>200</length>
    <type>Text</type>
</CustomField>