force-app/main/default/objects/Opportunity/fields/Opp_Priority_Score__c.field-meta.xml
<CustomField>
    <fullName>Opp_Priority_Score__c</fullName>
    <label>Opp Priority Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>