force-app/main/default/objects/Opportunity/fields/Permanent_Notes__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Notes__c</fullName>
    <label>Permanent Notes</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>