force-app/main/default/objects/Opportunity/fields/Pre_Call__c.field-meta.xml
<CustomField>
    <fullName>Pre_Call__c</fullName>
    <description>requested via ticket ON-1935 to improve the efficiency on Sales efforts</description>
    <label>Pre-Call</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Voicemail</fullName>
            </value>
            <value>
                <fullName>Connected</fullName>
            </value>
            <value>
                <fullName>Did Not Connect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>