force-app/main/default/objects/Opportunity/fields/Pre_Collective_Income__c.field-meta.xml
<CustomField>
    <fullName>Pre_Collective_Income__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Pre-Collective Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>