force-app/main/default/objects/Opportunity/fields/Pre_Screen_at__c.field-meta.xml
<CustomField>
    <fullName>Pre_Screen_at__c</fullName>
    <label>Pre-Screen at</label>
    <type>DateTime</type>
</CustomField>