force-app/main/default/objects/Opportunity/fields/Prepare_Tax_Return_at__c.field-meta.xml
<CustomField>
    <fullName>Prepare_Tax_Return_at__c</fullName>
    <label>Prepare Tax Return at</label>
    <type>DateTime</type>
</CustomField>