force-app/main/default/objects/Opportunity/fields/Pull_Store_Reports_W2s_at__c.field-meta.xml
<CustomField>
    <fullName>Pull_Store_Reports_W2s_at__c</fullName>
    <label>Pull &amp; Store Reports &amp; W2s at</label>
    <type>DateTime</type>
</CustomField>