force-app/main/default/objects/Opportunity/fields/Questionnaire_Detail__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire_Detail__c</fullName>
    <formula>Account.Questionnaire_Details__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Questionnaire Detail</label>
    <type>Text</type>
</CustomField>