force-app/main/default/objects/Opportunity/fields/Rebuild_Books_at__c.field-meta.xml
<CustomField>
    <fullName>Rebuild_Books_at__c</fullName>
    <label>Rebuild Books at</label>
    <type>DateTime</type>
</CustomField>