force-app/main/default/objects/Opportunity/fields/Registered_Agent_del__c.field-meta.xml
<CustomField>
    <fullName>Registered_Agent_del__c</fullName>
    <formula>TEXT(Account.Registered_Agent__c)</formula>
    <label>Registered Agent</label>
    <type>Text</type>
</CustomField>