force-app/main/default/objects/Opportunity/fields/Remediation_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Remediation_Completed_Date__c</fullName>
    <label>Remediation Completed Date</label>
    <type>Date</type>
</CustomField>