force-app/main/default/objects/Opportunity/fields/Remediation_Owner__c.field-meta.xml
<CustomField>
    <fullName>Remediation_Owner__c</fullName>
    <formula>CASE(
TEXT(Remediation_Status__c),
&quot;Missed Quarterly Check ins&quot;,&quot;0056g000004v4Qc&quot;,
&quot;Payment Problem&quot;,  MRM__c ,
&quot;Onboarding Stalled&quot;, &quot;00056g000003z0hx&quot;,
&quot;Unhappy Client&quot;,&quot;0056g000003z0hx&quot;,
&quot;Churn Risk&quot;, &quot;0056g000003z0hx&quot;,
&quot;0056g000003z0hx&quot;
)</formula>
    <label>Remediation Owner</label>
    <type>Text</type>
</CustomField>