force-app/main/default/objects/Opportunity/fields/Remediation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Remediation_Start_Date__c</fullName>
    <label>Remediation Start Date</label>
    <type>Date</type>
</CustomField>