force-app/main/default/objects/Opportunity/fields/Remediation_Status__c.field-meta.xml
<CustomField>
    <fullName>Remediation_Status__c</fullName>
    <label>Remediation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment Problem</fullName>
            </value>
            <value>
                <fullName>Missed Quarterly Check ins</fullName>
            </value>
            <value>
                <fullName>Onboarding Stalled</fullName>
            </value>
            <value>
                <fullName>Unhappy Client</fullName>
            </value>
            <value>
                <fullName>Churn Risk</fullName>
            </value>
            <value>
                <fullName>Client Moving - New State</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>