force-app/main/default/objects/Opportunity/fields/Reminder_Posted__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Posted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox for Overdue Reminders | if Opp is more than allowed days in existing stage</description>
    <label>Reminder Posted</label>
    <type>Checkbox</type>
</CustomField>