force-app/main/default/objects/Opportunity/fields/Return_Delivery_at__c.field-meta.xml
<CustomField>
    <fullName>Return_Delivery_at__c</fullName>
    <label>Return Delivery at</label>
    <type>DateTime</type>
</CustomField>