force-app/main/default/objects/Opportunity/fields/Running_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Running_Start_Date__c</fullName>
    <label>Running Start Date</label>
    <type>Date</type>
</CustomField>