force-app/main/default/objects/Opportunity/fields/Salary_Changed__c.field-meta.xml
<CustomField>
    <fullName>Salary_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Salary Changed</label>
    <type>Checkbox</type>
</CustomField>