force-app/main/default/objects/Opportunity/fields/Self_Checkout_Member__c.field-meta.xml
<CustomField>
    <fullName>Self_Checkout_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Self Checkout Member</label>
    <type>Checkbox</type>
</CustomField>