force-app/main/default/objects/Opportunity/fields/Setup_QBO_at__c.field-meta.xml
<CustomField>
    <fullName>Setup_QBO_at__c</fullName>
    <label>Setup QBO at</label>
    <type>DateTime</type>
</CustomField>