force-app/main/default/objects/Opportunity/fields/Signup_Link__c.field-meta.xml
<CustomField>
    <fullName>Signup_Link__c</fullName>
    <description>This field is populated through Acquisition Form Callout</description>
    <label>Signup Link</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>