force-app/main/default/objects/Opportunity/fields/Sortable_Date__c.field-meta.xml
<CustomField>
    <fullName>Sortable_Date__c</fullName>
    <formula>TEXT(YEAR(TODAY()))
&amp; 
IF(MONTH(TODAY())&gt;9,&quot;-&quot;,&quot;-0&quot;)
&amp;
TEXT(MONTH(TODAY()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sortable Date</label>
    <type>Text</type>
</CustomField>