force-app/main/default/objects/Opportunity/fields/Sortable_Last_Month__c.field-meta.xml
<CustomField>
    <fullName>Sortable_Last_Month__c</fullName>
    <formula>TEXT(
	if(
		month(
		today())=1,
		YEAR(TODAY())-1,
		YEAR(TODAY())
	)
)
&amp;
IF(
MONTH(TODAY())&gt;9,
&quot;-&quot;,
&quot;-0&quot;
)
&amp;
TEXT
(
	if(
		MONTH(TODAY())=1,
		12,
		MONTH(TODAY())-1
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sortable Last Month</label>
    <type>Text</type>
</CustomField>