force-app/main/default/objects/Opportunity/fields/Stage_Duration__c.field-meta.xml
<CustomField>
    <fullName>Stage_Duration__c</fullName>
    <formula>TODAY()- DATEVALUE(Last_Stage_Changed_At__c)</formula>
    <label>Stage Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>