force-app/main/default/objects/Opportunity/fields/Start_Return_at__c.field-meta.xml
<CustomField>
    <fullName>Start_Return_at__c</fullName>
    <label>Start Return at</label>
    <type>DateTime</type>
</CustomField>