force-app/main/default/objects/Opportunity/fields/Sub_Stage__c.field-meta.xml
<CustomField>
    <fullName>Sub_Stage__c</fullName>
    <label>Sub-Stage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call Canceled</fullName>
            </value>
            <value>
                <fullName>Call Rescheduled</fullName>
            </value>
            <value>
                <fullName>Call Scheduled</fullName>
            </value>
            <value>
                <fullName>Collective needs to confirm info</fullName>
            </value>
            <value>
                <fullName>Could not close</fullName>
            </value>
            <value>
                <fullName>Disqualified</fullName>
            </value>
            <value>
                <fullName>Finalizing Upcoming Client contract</fullName>
            </value>
            <value>
                <fullName>Needs time to review materials</fullName>
            </value>
            <value>
                <fullName>Needs to talk to spouse/partner</fullName>
            </value>
            <value>
                <fullName>Never Responded</fullName>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
            <value>
                <fullName>Not Ready</fullName>
            </value>
            <value>
                <fullName>Prospect needs to provide more info</fullName>
            </value>
            <value>
                <fullName>Re-domesticating LLC</fullName>
            </value>
            <value>
                <fullName>Reviewing with financial advisor</fullName>
            </value>
            <value>
                <fullName>Shopping Around</fullName>
            </value>
            <value>
                <fullName>Traveling</fullName>
            </value>
            <value>
                <fullName>Trying to Schedule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>