force-app/main/default/objects/Opportunity/fields/Sub_Stage_Reason__c.field-meta.xml
<CustomField>
    <fullName>Sub_Stage_Reason__c</fullName>
    <label>Sub-Stage Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Sub_Stage__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Considering self-employment</fullName>
            </value>
            <value>
                <fullName>Looking for next project</fullName>
            </value>
            <value>
                <fullName>Wants to Remain - LLC/Sole-P/1099</fullName>
            </value>
            <value>
                <fullName>Wants to Use Local CPA</fullName>
            </value>
            <value>
                <fullName>Using other FinTech Services</fullName>
            </value>
            <value>
                <fullName>Price Too High</fullName>
            </value>
            <value>
                <fullName>Unsupported Entity - Inc./S-Corp</fullName>
            </value>
            <value>
                <fullName>Unsupported Entity - MM LLC</fullName>
            </value>
            <value>
                <fullName>Job requires PLLC</fullName>
            </value>
            <value>
                <fullName>Unsupported State</fullName>
            </value>
            <value>
                <fullName>Low Self-Employed Profit</fullName>
            </value>
            <value>
                <fullName>Unfiled Tax Returns</fullName>
            </value>
            <value>
                <fullName>Unsupported Profession</fullName>
            </value>
            <value>
                <fullName>Sales Tax</fullName>
            </value>
            <value>
                <fullName>Non-Citizen</fullName>
            </value>
            <value>
                <fullName>Employees</fullName>
            </value>
            <value>
                <fullName>Foreign Assets &gt;$50k</fullName>
            </value>
            <value>
                <fullName>Inventory</fullName>
            </value>
            <value>
                <fullName>Passive Income</fullName>
            </value>
            <value>
                <fullName>Took W-2 Job</fullName>
            </value>
            <value>
                <fullName>Crypto</fullName>
            </value>
            <value>
                <fullName>Accrual Accounting Needed</fullName>
            </value>
            <value>
                <fullName>Multiple Businesses</fullName>
            </value>
            <value>
                <fullName>Dislikes all-inclusive</fullName>
            </value>
            <value>
                <fullName>Stopped Responding</fullName>
            </value>
            <value>
                <fullName>Bad Fit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>