force-app/main/default/objects/Opportunity/fields/Take_Training_Call_at__c.field-meta.xml
<CustomField>
    <fullName>Take_Training_Call_at__c</fullName>
    <label>Take Training Call at</label>
    <type>DateTime</type>
</CustomField>