force-app/main/default/objects/Opportunity/fields/Task_RT_Tax_Return__c.field-meta.xml
<CustomField>
    <fullName>Task_RT_Tax_Return__c</fullName>
    <formula>CASESAFEID(&quot;0126g0000003c3RAAQ&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task RT Tax Return</label>
    <type>Text</type>
</CustomField>