force-app/main/default/objects/Opportunity/fields/Tax_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Tax_Advisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax Preparer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities5</relationshipName>
    <type>Lookup</type>
</CustomField>