force-app/main/default/objects/Opportunity/fields/Tax_Return_Needed__c.field-meta.xml
<CustomField>
    <fullName>Tax_Return_Needed__c</fullName>
    <label>Tax Return Needed</label>
    <length>20</length>
    <type>Text</type>
</CustomField>