force-app/main/default/objects/Opportunity/fields/Tax_Return_Type__c.field-meta.xml
<CustomField>
    <fullName>Tax_Return_Type__c</fullName>
    <label>Tax Return Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ITR</fullName>
            </value>
            <value>
                <fullName>BTR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>