force-app/main/default/objects/Opportunity/fields/Tax_Return_Year__c.field-meta.xml
<CustomField>
    <fullName>Tax_Return_Year__c</fullName>
    <label>Tax Return Year</label>
    <length>8</length>
    <type>Text</type>
</CustomField>