force-app/main/default/objects/Opportunity/fields/Tax_Team_Manager__c.field-meta.xml
<CustomField>
    <fullName>Tax_Team_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities6</relationshipName>
    <type>Lookup</type>
</CustomField>