force-app/main/default/objects/Opportunity/fields/TaxCalc__c.field-meta.xml
<CustomField>
    <fullName>TaxCalc__c</fullName>
    <formula>Account.Tax_Calculator_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TaxCalc</label>
    <type>Text</type>
</CustomField>