force-app/main/default/objects/Opportunity/fields/Test_Field__c.field-meta.xml
<CustomField>
    <fullName>Test_Field__c</fullName>
    <description>use this to test your formula or automation</description>
    <label>Test Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>