force-app/main/default/objects/Opportunity/fields/Time_in_Remediation__c.field-meta.xml
<CustomField>
    <fullName>Time_in_Remediation__c</fullName>
    <formula>IF(
ISBLANK( Remediation_Completed_Date__c ),
TODAY()- Remediation_Start_Date__c,
Remediation_Completed_Date__c - Remediation_Start_Date__c
)</formula>
    <label>Days in Remediation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>