force-app/main/default/objects/Opportunity/fields/Time_to_Approve__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Approve__c</fullName>
    <formula>Transition_Approved_At__c - Transition_Submitted__c</formula>
    <label>Time to Approve</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>