force-app/main/default/objects/Opportunity/fields/Time_to_Onboard__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Onboard__c</fullName>
    <formula>Running_Start_Date__c - First_Payment_Date__c</formula>
    <label>Time to Onboard</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>