force-app/main/default/objects/Opportunity/fields/Training_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Training_Call_Date__c</fullName>
    <label>Training Call Date</label>
    <type>Date</type>
</CustomField>