force-app/main/default/objects/Opportunity/fields/Training_Flow_Time__c.field-meta.xml
<CustomField>
    <fullName>Training_Flow_Time__c</fullName>
    <formula>IF(

ISBLANK(Running_Start_Date__c), TODAY() - DATEVALUE( Setup_QBO_at__c ), Running_Start_Date__c - DATEVALUE( Setup_QBO_at__c ))</formula>
    <label>Training Flow Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>