force-app/main/default/objects/Opportunity/fields/Transfer_Gusto__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Gusto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transfer Gusto</label>
    <type>Checkbox</type>
</CustomField>