force-app/main/default/objects/Opportunity/fields/Transfer_QBO__c.field-meta.xml
<CustomField>
    <fullName>Transfer_QBO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transfer QBO</label>
    <type>Checkbox</type>
</CustomField>