force-app/main/default/objects/Opportunity/fields/Transfer_Registered_Agent__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Registered_Agent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transfer Registered Agent</label>
    <type>Checkbox</type>
</CustomField>