force-app/main/default/objects/Opportunity/fields/Transition_Approved_At__c.field-meta.xml
<CustomField>
    <fullName>Transition_Approved_At__c</fullName>
    <label>Transition Approved At</label>
    <type>DateTime</type>
</CustomField>