force-app/main/default/objects/Opportunity/fields/Transition_Plan_Approved_to_Initial_Cont__c.field-meta.xml
<CustomField>
    <fullName>Transition_Plan_Approved_to_Initial_Cont__c</fullName>
    <formula>IF(NOT(ISBLANK( Running_Start_Date__c )), Running_Start_Date__c - DATEVALUE( Setup_QBO_at__c ),Null)</formula>
    <inlineHelpText>--&gt; How long does it take to enter running flow (from onboarding flow)</inlineHelpText>
    <label>Transition Plan Approved to Initial Cont</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>