force-app/main/default/objects/Opportunity/fields/Transition_Plan_Link__c.field-meta.xml
<CustomField>
    <fullName>Transition_Plan_Link__c</fullName>
    <label>Transition Plan Link</label>
    <type>Url</type>
</CustomField>