force-app/main/default/objects/Opportunity/fields/Transition_Plan_Submitted_to_Approved__c.field-meta.xml
<CustomField>
    <fullName>Transition_Plan_Submitted_to_Approved__c</fullName>
    <formula>IF(NOT(ISBLANK( Setup_QBO_at__c )), (DATEVALUE(Setup_QBO_at__c )) - (DATEVALUE( Transition_Approved_At__c )),Null)</formula>
    <inlineHelpText>--&gt; How long does it take to approve transition plan and member enters onboarding/training flow</inlineHelpText>
    <label>Transition Plan Submitted to Approved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>