force-app/main/default/objects/Opportunity/fields/Transition_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Transition_Submitted__c</fullName>
    <label>Transition Submitted At</label>
    <type>DateTime</type>
</CustomField>