force-app/main/default/objects/Opportunity/fields/Trigger_Extension__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Extension__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trigger Extension</label>
    <type>Checkbox</type>
</CustomField>