force-app/main/default/objects/Opportunity/fields/Weighted_MRR__c.field-meta.xml
<CustomField>
    <fullName>Weighted_MRR__c</fullName>
    <formula>Probability  * Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weighted MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>