force-app/main/default/objects/Opportunity/fields/X2019_ITR__c.field-meta.xml
<CustomField>
    <fullName>X2019_ITR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>2019 - ITR</label>
    <type>Checkbox</type>
</CustomField>