force-app/main/default/objects/Opportunity/fields/X2020_BTR__c.field-meta.xml
<CustomField>
    <fullName>X2020_BTR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>2020 - BTR</label>
    <type>Checkbox</type>
</CustomField>