force-app/main/default/objects/Opportunity/fields/Zoom_Call_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Zoom_Call_Outcome__c</fullName>
    <label>Zoom Call Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Follow Up</fullName>
            </value>
            <value>
                <fullName>Send Onboarding Email</fullName>
            </value>
            <value>
                <fullName>Bad Fit (has a Corp)</fullName>
            </value>
            <value>
                <fullName>Bad Fit (Low Income)</fullName>
            </value>
            <value>
                <fullName>Bad Fit (State not supported)</fullName>
            </value>
            <value>
                <fullName>Bad Fit (Complex Tax situations)</fullName>
            </value>
            <value>
                <fullName>Bad Fit (Other, Refer To Notes)</fullName>
            </value>
            <value>
                <fullName>Lost Contact</fullName>
            </value>
            <value>
                <fullName>Call Cancelled</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>