force-app/main/default/objects/Opportunity/recordTypes/Onboarding.recordType-meta.xml
<RecordType>
    <fullName>Onboarding</fullName>
    <active>true</active>
    <businessProcess>Onboarding</businessProcess>
    <label>Onboarding</label>
</RecordType>