force-app/main/default/objects/Opportunity/recordTypes/Post_Payment.recordType-meta.xml
<RecordType>
    <fullName>Post_Payment</fullName>
    <active>true</active>
    <businessProcess>Post-Payment</businessProcess>
    <label>Post-Payment</label>
</RecordType>