force-app/main/default/objects/Opportunity/recordTypes/Running_A.recordType-meta.xml
<RecordType>
    <fullName>Running_A</fullName>
    <active>true</active>
    <businessProcess>Running_A</businessProcess>
    <label>Running_A</label>
</RecordType>