force-app/main/default/objects/Opportunity/recordTypes/Running_B.recordType-meta.xml
<RecordType>
    <fullName>Running_B</fullName>
    <active>true</active>
    <businessProcess>Running_B</businessProcess>
    <label>Running_B</label>
</RecordType>