force-app/main/default/objects/Opportunity/recordTypes/Takeover.recordType-meta.xml
<RecordType>
    <fullName>Takeover</fullName>
    <active>true</active>
    <businessProcess>Takeover</businessProcess>
    <label>Takeover</label>
</RecordType>